8-advanced-workload-concepts/manifests-sts/deployment-mongo-express.yaml
# Mongo Express Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongo-lab
  labels:
    app: mongo-express
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
        tier: frontend
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0-20-alpine3.19
          # Debug commands
          # command: ["/bin/sh", "-c"]
          # args:
          #   - sleep 300
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
