8-advanced-workload-concepts/manifests-sts/statefulset-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongo-lab
spec:
  replicas: 2
  serviceName: mongodb-headless
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0.15-noble
          command:
            - "mongod"
            - "--config"
            - "/etc/mongod.conf"
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: mongodb-pvc
              mountPath: /data/db
            - name: mongodb-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
      volumes:
        - name: mongodb-config
          configMap:
            name: mongodb-config

  volumeClaimTemplates:
    - metadata:
        name: mongodb-pvc
      spec:
        storageClassName: "longhorn"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
