8-advanced-workload-concepts/manifests-sts/service-mongo-express.yaml
# Mongo Express Service
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongo-lab
  labels:
    app: mongo-express
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
